# identity.rs

examples/1_advanced/: 10_zkp_revocation.rs
examples/utils/: utils.rs
identity_core/: Cargo.toml
identity_core/src/common/: mod.rs  timestamp.rs
identity_credential/src/credential/: builder.rs  credential.rs
identity_credential/src/domain_linkage/: domain_linkage_credential_builder.rs  domain_linkage_validator.rs
identity_credential/src/presentation/: jwt_presentation_options.rs  jwt_serialization.rs  mod.rs
identity_credential/src/revocation/status_list_2021/: credential.rs
identity_credential/src/revocation/validity_timeframe_2024/: revocation_timeframe_status.rs
identity_credential/src/validator/jpt_credential_validation/: jpt_credential_validator.rs  jpt_credential_validator_utils.rs
identity_credential/src/validator/jpt_presentation_validation/: jpt_presentation_validator_utils.rs
identity_credential/src/validator/jwt_credential_validation/: jwt_credential_validator.rs
identity_credential/src/validator/jwt_presentation_validation/: jwt_presentation_validator.rs
identity_credential/src/validator/sd_jwt/: validator.rs
identity_iota_core/src/client/: identity_client.rs  iota_client.rs
identity_iota_core/src/document/: iota_document.rs  iota_document_metadata.rs
identity_jose/: Cargo.toml
identity_jose/src/jwk/curve/: bls.rs  mod.rs
identity_jose/src/jws/: algorithm.rs  decoder.rs
identity_jose/src/jws/custom_verification/: iccs_jws_verifier.rs  jws_verifier.rs  mod.rs
identity_resolver/src/resolution/: resolver.rs
identity_storage/src/storage/: timeframe_revocation_ext.rs
